hard-gists/6087798/run.log
=== Docker Run Log for 6087798 ===
Started at: Mi 29. Okt 16:19:24 CET 2025

[2025-10-29 16:19:25] START: Running container for 6087798
[2025-10-29 16:19:25] SUCCESS: Container b1a9d8b300933b538ad544295bb9065415c049cf8454df160a2da6220cd493f5 started for 6087798
=== Container logs for 6087798 ===
  File "/snippet.py", line 47
    print ann.fprop(theano.shared(inputs, name='inputs')).eval()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6087798 ===
[2025-10-29 16:19:27] INFO: Container b1a9d8b300933b538ad544295bb9065415c049cf8454df160a2da6220cd493f5 has stopped
